# vim: syntax=cmake

option(ENABLE_PPA "Enable PPA profiling instrumentation" OFF)
if(ENABLE_PPA)
    add_subdirectory(PPA)
    list(APPEND PLATFORM_LIBS PPA)
    if(UNIX)
        list(APPEND PLATFORM_LIBS dl)
    endif(UNIX)
endif(ENABLE_PPA)

option(ENABLE_VTUNE "Enable Vtune profiling instrumentation" OFF)
if(ENABLE_VTUNE)
    add_subdirectory(vtune)
    list(APPEND PLATFORM_LIBS vtune)
    target_include_directories(vtune PRIVATE $ENV{VTUNE_AMPLIFIER_XE_2015_DIR}/include)
    if(WIN32)
        list(APPEND PLATFORM_LIBS $ENV{VTUNE_AMPLIFIER_XE_2015_DIR}/lib64/libittnotify.lib)
    else()
        list(APPEND PLATFORM_LIBS $ENV{VTUNE_AMPLIFIER_XE_2015_DIR}/lib64/libittnotify.a dl)
    endif()
endif(ENABLE_VTUNE)
