add_library(vtune vtune.h vtune.cpp ../cpuEvents.h)
if(VTUNE_INCLUDE_DIR)
    target_include_directories(vtune PRIVATE ${VTUNE_INCLUDE_DIR})
else()
    target_include_directories(vtune PRIVATE $ENV{VTUNE_AMPLIFIER_XE_2015_DIR}/include)
endif()
target_compile_definitions(vtune PRIVATE ENABLE_VTUNE)
if(X265_CXX20_WARNING_OPTIONS)
    target_compile_options(vtune PRIVATE ${X265_CXX20_WARNING_TARGET_OPTIONS})
endif()
